force-app/main/default/objects/SM_Call_Audit_Form__c/SM_Call_Audit_Form__c.object-meta.xml
<CustomObject>
    <label>SM Call Audit Form</label>
    <nameField>
        <displayFormat>SM Audit Form -{0000000}</displayFormat>
        <label>SM Call Audit Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SM Call Audit Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>