force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Closure_Call_Number__c.field-meta.xml
<CustomField>
    <fullName>Closure_Call_Number__c</fullName>
    <label>Closure Call Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>