force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Closure_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_End_Date__c</fullName>
    <label>Closure End Date</label>
    <type>Date</type>
</CustomField>