force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Closure_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Start_Date__c</fullName>
    <label>Closure Start Date</label>
    <type>Date</type>
</CustomField>