force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Closure_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Closure_Start_Date_Time__c</fullName>
    <label>Closure Start Date/Time</label>
    <type>DateTime</type>
</CustomField>