force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Closure_Start_Time_in_min__c.field-meta.xml
<CustomField>
    <fullName>Closure_Start_Time_in_min__c</fullName>
    <label>Closure Start Time (in min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>