force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Final_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Total_Score__c</fullName>
    <formula>( (Closure_Score__c  * 30)  + ( Need_Mapping_Score__c  * 15) + ( Opening_Score__c  * 10) + ( Probing_Score__c  * 25) + ( Referral_Score__c  * 10) + ( Subjective_Score__c  * 10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Total Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>