force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Follow_up_adherenece__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_adherenece__c</fullName>
    <label>Follow up adherenece</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>