force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SM Call Audit Forms</relationshipLabel>
    <relationshipName>SM_Call_Audit_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>