force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Lead_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Name__c</fullName>
    <formula>Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Last Name</label>
    <type>Text</type>
</CustomField>