force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Lead_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Email__c</fullName>
    <formula>Lead__r.Owner_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Email</label>
    <type>Text</type>
</CustomField>