force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Need_Mapping_Area_of_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping_Area_of_Improvement__c</fullName>
    <label>Need Mapping Area of Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>