force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Need_Mapping_Audited_By__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping_Audited_By__c</fullName>
    <label>Need Mapping Audited By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>