force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Need_Mapping_Call_Number__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping_Call_Number__c</fullName>
    <label>Need Mapping Call Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>