force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Need_Mapping_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping_End_Date__c</fullName>
    <label>Need Mapping End Date</label>
    <type>Date</type>
</CustomField>