force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Need_Mapping_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping_End_Time__c</fullName>
    <label>Need Mapping End Time</label>
    <type>DateTime</type>
</CustomField>