force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Need_Mapping_End_Time_in_sec__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping_End_Time_in_sec__c</fullName>
    <label>Need Mapping End Time (in sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>