force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Need_Mapping_Positive_points__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping_Positive_points__c</fullName>
    <label>Need Mapping Positive points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>