force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Need_Mapping_Score__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping_Score__c</fullName>
    <label>Need Mapping Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>