force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Need_mapping_Start_Time_in_sec__c.field-meta.xml
<CustomField>
    <fullName>Need_mapping_Start_Time_in_sec__c</fullName>
    <label>Need mapping Start Time(in sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>