force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Opening_Area_Of_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Opening_Area_Of_Improvement__c</fullName>
    <label>Opening Area Of Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>