force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Opening_Audited_By__c.field-meta.xml
<CustomField>
    <fullName>Opening_Audited_By__c</fullName>
    <label>Opening Audited By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>