force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Opening_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Opening_End_Date__c</fullName>
    <label>Opening End Date</label>
    <type>Date</type>
</CustomField>