force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Opening_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opening_End_Date_Time__c</fullName>
    <label>Opening End Date/Time</label>
    <type>DateTime</type>
</CustomField>