force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Opening_End_Time_in_sec__c.field-meta.xml
<CustomField>
    <fullName>Opening_End_Time_in_sec__c</fullName>
    <label>Opening End Time (in sec)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>