force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Opening_Score__c.field-meta.xml
<CustomField>
    <fullName>Opening_Score__c</fullName>
    <label>Opening Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>