force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Opening_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opening_Start_Date_Time__c</fullName>
    <label>Opening Start Date/Time</label>
    <type>DateTime</type>
</CustomField>