force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Opening_Start_Time_in_min__c.field-meta.xml
<CustomField>
    <fullName>Opening_Start_Time_in_min__c</fullName>
    <label>Opening Start Time (in min)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>