force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Probing_Call_Number__c.field-meta.xml
<CustomField>
    <fullName>Probing_Call_Number__c</fullName>
    <label>Probing Call Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>