force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Probing_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Probing_End_Date_Time__c</fullName>
    <label>Probing End Date/Time</label>
    <type>DateTime</type>
</CustomField>