force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Probing_End_Time_in_min__c.field-meta.xml
<CustomField>
    <fullName>Probing_End_Time_in_min__c</fullName>
    <label>Probing End Time (in min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>