force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Probing_Positive_Points__c.field-meta.xml
<CustomField>
    <fullName>Probing_Positive_Points__c</fullName>
    <label>Probing Positive Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>