force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Probing_Score__c.field-meta.xml
<CustomField>
    <fullName>Probing_Score__c</fullName>
    <label>Probing Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>