force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Probing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Probing_Start_Date__c</fullName>
    <label>Probing Start Date</label>
    <type>Date</type>
</CustomField>