force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Probing_Start_Time_in_min__c.field-meta.xml
<CustomField>
    <fullName>Probing_Start_Time_in_min__c</fullName>
    <label>Probing Start Time(in min)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>