force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_Area_of_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Referral_Area_of_Improvement__c</fullName>
    <label>Referral Area of Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>