force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_Audited_by__c.field-meta.xml
<CustomField>
    <fullName>Referral_Audited_by__c</fullName>
    <label>Referral Audited by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>