force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_Call_Number__c.field-meta.xml
<CustomField>
    <fullName>Referral_Call_Number__c</fullName>
    <label>Referral Call Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>