force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_End_Date__c</fullName>
    <label>Referral End Date</label>
    <type>Date</type>
</CustomField>