force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Referral_End_Date_Time__c</fullName>
    <label>Referral End Date/Time</label>
    <type>DateTime</type>
</CustomField>