force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_End_Time_in_sec__c.field-meta.xml
<CustomField>
    <fullName>Referral_End_Time_in_sec__c</fullName>
    <label>Referral End Time (in sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>