force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_Positive_Points__c.field-meta.xml
<CustomField>
    <fullName>Referral_Positive_Points__c</fullName>
    <label>Referral Positive Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>