force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_Score__c.field-meta.xml
<CustomField>
    <fullName>Referral_Score__c</fullName>
    <label>Referral Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>