force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Start_Date__c</fullName>
    <label>Referral Start Date</label>
    <type>Date</type>
</CustomField>