force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Referral_Start_Time_in_min__c.field-meta.xml
<CustomField>
    <fullName>Referral_Start_Time_in_min__c</fullName>
    <label>Referral Start Time (in min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>