force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Subjective_Audited_by__c.field-meta.xml
<CustomField>
    <fullName>Subjective_Audited_by__c</fullName>
    <label>Subjective Audited by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>