force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Subjective_Call_Number__c.field-meta.xml
<CustomField>
    <fullName>Subjective_Call_Number__c</fullName>
    <label>Subjective Call Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>