force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Subjective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subjective_End_Date__c</fullName>
    <label>Subjective End Date</label>
    <type>Date</type>
</CustomField>