force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Subjective_End_Time_in_min__c.field-meta.xml
<CustomField>
    <fullName>Subjective_End_Time_in_min__c</fullName>
    <label>Subjective End Time (in min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>