force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Subjective_Positive_Points__c.field-meta.xml
<CustomField>
    <fullName>Subjective_Positive_Points__c</fullName>
    <label>Subjective Positive Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>