force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Subjective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subjective_Start_Date__c</fullName>
    <label>Subjective Start Date</label>
    <type>Date</type>
</CustomField>