force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Subjective_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Subjective_Start_Date_Time__c</fullName>
    <label>Subjective Start Date/Time</label>
    <type>DateTime</type>
</CustomField>