force-app/main/default/objects/SM_Call_Audit_Form__c/fields/Temperature_Type__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Type__c</fullName>
    <label>Temperature Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Temperature__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>